plugin-bazel/src/main/gen/org/jetbrains/bsp/bazel/languages/starlark/parser/StarlarkParser.java
// This is a generated file. Not intended for manual editing.
package org.jetbrains.bsp.bazel.languages.starlark.parser;

import com.intellij.lang.PsiBuilder;
import com.intellij.lang.PsiBuilder.Marker;
import static org.jetbrains.bsp.bazel.languages.starlark.StarlarkTypes.*;
import static org.jetbrains.bsp.bazel.languages.starlark.StarlarkParserUtils.*;
import com.intellij.psi.tree.IElementType;
import com.intellij.lang.ASTNode;
import com.intellij.psi.tree.TokenSet;
import com.intellij.lang.PsiParser;
import com.intellij.lang.LightPsiParser;

@SuppressWarnings({"SimplifiableIfStatement", "UnusedAssignment"})
public class StarlarkParser implements PsiParser, LightPsiParser {

  public ASTNode parse(IElementType t, PsiBuilder b) {
    parseLight(t, b);
    return b.getTreeBuilt();
  }

  public void parseLight(IElementType t, PsiBuilder b) {
    boolean r;
    b = adapt_builder_(t, b, this, null);
    Marker m = enter_section_(b, 0, _COLLAPSE_, null);
    r = parse_root_(t, b);
    exit_section_(b, 0, m, t, r, true, TRUE_CONDITION);
  }

  protected boolean parse_root_(IElementType t, PsiBuilder b) {
    return parse_root_(t, b, 0);
  }

  static boolean parse_root_(IElementType t, PsiBuilder b, int l) {
    return File(b, l + 1);
  }

  /* ********************************************************** */
  // IDENTIFIER '=' Test
  //             | '*' Test
  //             | '**' Test
  //             | Test
  public static boolean Argument(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Argument")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ARGUMENT, "<argument>");
    r = Argument_0(b, l + 1);
    if (!r) r = Argument_1(b, l + 1);
    if (!r) r = Argument_2(b, l + 1);
    if (!r) r = Test(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // IDENTIFIER '=' Test
  private static boolean Argument_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Argument_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, IDENTIFIER, EQ);
    r = r && Test(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // '*' Test
  private static boolean Argument_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Argument_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, ASTERISK);
    r = r && Test(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // '**' Test
  private static boolean Argument_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Argument_2")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, DOUBLE_ASTERISK);
    r = r && Test(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // Argument (',' Argument)*
  public static boolean Arguments(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Arguments")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ARGUMENTS, "<arguments>");
    r = Argument(b, l + 1);
    r = r && Arguments_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // (',' Argument)*
  private static boolean Arguments_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Arguments_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!Arguments_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "Arguments_1", c)) break;
    }
    return true;
  }

  // ',' Argument
  private static boolean Arguments_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Arguments_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, COMMA);
    r = r && Argument(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // Expression <<noNewLineOrLineBreak>> ('=' | '+=' | '-=' | '*=' | '/=' | '//=' | '%=' | '&=' | '|=' | '^=' | '<<=' | '>>=') <<noNewLineOrLineBreak>> Expression
  public static boolean AssignStmt(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AssignStmt")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ASSIGN_STMT, "<assign stmt>");
    r = Expression(b, l + 1);
    r = r && noNewLineOrLineBreak(b, l + 1);
    r = r && AssignStmt_2(b, l + 1);
    r = r && noNewLineOrLineBreak(b, l + 1);
    r = r && Expression(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // '=' | '+=' | '-=' | '*=' | '/=' | '//=' | '%=' | '&=' | '|=' | '^=' | '<<=' | '>>='
  private static boolean AssignStmt_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AssignStmt_2")) return false;
    boolean r;
    r = consumeToken(b, EQ);
    if (!r) r = consumeToken(b, PLUS_EQ);
    if (!r) r = consumeToken(b, MINUS_EQ);
    if (!r) r = consumeToken(b, ASTERISK_EQ);
    if (!r) r = consumeToken(b, DIV_EQ);
    if (!r) r = consumeToken(b, DIV_INT_EQ);
    if (!r) r = consumeToken(b, MODULO_EQ);
    if (!r) r = consumeToken(b, AND_EQ);
    if (!r) r = consumeToken(b, OR_EQ);
    if (!r) r = consumeToken(b, XOR_EQ);
    if (!r) r = consumeToken(b, SHIFT_LEFT_EQ);
    if (!r) r = consumeToken(b, SHIFT_RIGHT_EQ);
    return r;
  }

  /* ********************************************************** */
  // BinaryExpr1 (<<noNewLineOrLineBreak>> Binop <<noNewLineOrLineBreak>> BinaryExpr)?
  public static boolean BinaryExpr(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "BinaryExpr")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, BINARY_EXPR, "<binary expr>");
    r = BinaryExpr1(b, l + 1);
    r = r && BinaryExpr_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // (<<noNewLineOrLineBreak>> Binop <<noNewLineOrLineBreak>> BinaryExpr)?
  private static boolean BinaryExpr_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "BinaryExpr_1")) return false;
    BinaryExpr_1_0(b, l + 1);
    return true;
  }

  // <<noNewLineOrLineBreak>> Binop <<noNewLineOrLineBreak>> BinaryExpr
  private static boolean BinaryExpr_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "BinaryExpr_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = noNewLineOrLineBreak(b, l + 1);
    r = r && Binop(b, l + 1);
    r = r && noNewLineOrLineBreak(b, l + 1);
    r = r && BinaryExpr(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // PrimaryExpr
  //               | UnaryExpr
  //               | LambdaExpr
  //               | IfExpr
  public static boolean BinaryExpr1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "BinaryExpr1")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, BINARY_EXPR_1, "<binary expr 1>");
    r = PrimaryExpr(b, l + 1);
    if (!r) r = UnaryExpr(b, l + 1);
    if (!r) r = LambdaExpr(b, l + 1);
    if (!r) r = IfExpr(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // BinaryExpr21 (<<noNewLineOrLineBreak>> Binop <<noNewLineOrLineBreak>> BinaryExpr2)?
  public static boolean BinaryExpr2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "BinaryExpr2")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, BINARY_EXPR_2, "<binary expr 2>");
    r = BinaryExpr21(b, l + 1);
    r = r && BinaryExpr2_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // (<<noNewLineOrLineBreak>> Binop <<noNewLineOrLineBreak>> BinaryExpr2)?
  private static boolean BinaryExpr2_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "BinaryExpr2_1")) return false;
    BinaryExpr2_1_0(b, l + 1);
    return true;
  }

  // <<noNewLineOrLineBreak>> Binop <<noNewLineOrLineBreak>> BinaryExpr2
  private static boolean BinaryExpr2_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "BinaryExpr2_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = noNewLineOrLineBreak(b, l + 1);
    r = r && Binop(b, l + 1);
    r = r && noNewLineOrLineBreak(b, l + 1);
    r = r && BinaryExpr2(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // PrimaryExpr
  //                | UnaryExpr
  //                | LambdaExpr
  public static boolean BinaryExpr21(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "BinaryExpr21")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, BINARY_EXPR_21, "<binary expr 21>");
    r = PrimaryExpr(b, l + 1);
    if (!r) r = UnaryExpr(b, l + 1);
    if (!r) r = LambdaExpr(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // or | and
  //       | '==' | '!=' | '<' | '>' | '<=' | '>=' | in | not in
  //       | '|'
  //       | '^'
  //       | '&'
  //       | '<<' | '>>'
  //       | '-' | '+'
  //       | '*' | '%' | '/' | '//'
  public static boolean Binop(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Binop")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, BINOP, "<binop>");
    r = consumeToken(b, OR);
    if (!r) r = consumeToken(b, AND);
    if (!r) r = consumeToken(b, IS_EQUAL);
    if (!r) r = consumeToken(b, IS_NOT_EQUAL);
    if (!r) r = consumeToken(b, LESS_THAN);
    if (!r) r = consumeToken(b, GREATER_THAN);
    if (!r) r = consumeToken(b, LESS_OR_EQUAL);
    if (!r) r = consumeToken(b, GREATER_OR_EQUAL);
    if (!r) r = consumeToken(b, IN);
    if (!r) r = parseTokens(b, 0, NOT, IN);
    if (!r) r = consumeToken(b, BIT_OR);
    if (!r) r = consumeToken(b, BIT_XOR);
    if (!r) r = consumeToken(b, BIT_AND);
    if (!r) r = consumeToken(b, BIT_SHIFT_LEFT);
    if (!r) r = consumeToken(b, BIT_SHIFT_RIGHT);
    if (!r) r = consumeToken(b, MINUS);
    if (!r) r = consumeToken(b, PLUS);
    if (!r) r = consumeToken(b, ASTERISK);
    if (!r) r = consumeToken(b, MODULO);
    if (!r) r = consumeToken(b, DIV);
    if (!r) r = consumeToken(b, DIV_INT);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // break
  public static boolean BreakStmt(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "BreakStmt")) return false;
    if (!nextTokenIs(b, BREAK)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, BREAK);
    exit_section_(b, m, BREAK_STMT, r);
    return r;
  }

  /* ********************************************************** */
  // '(' (Arguments ','?)? ')'
  public static boolean CallSuffix(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "CallSuffix")) return false;
    if (!nextTokenIs(b, LEFT_PAREN)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LEFT_PAREN);
    r = r && CallSuffix_1(b, l + 1);
    r = r && consumeToken(b, RIGHT_PAREN);
    exit_section_(b, m, CALL_SUFFIX, r);
    return r;
  }

  // (Arguments ','?)?
  private static boolean CallSuffix_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "CallSuffix_1")) return false;
    CallSuffix_1_0(b, l + 1);
    return true;
  }

  // Arguments ','?
  private static boolean CallSuffix_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "CallSuffix_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = Arguments(b, l + 1);
    r = r && CallSuffix_1_0_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // ','?
  private static boolean CallSuffix_1_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "CallSuffix_1_0_1")) return false;
    consumeToken(b, COMMA);
    return true;
  }

  /* ********************************************************** */
  // for LoopVariables in Test
  //              | if Test
  public static boolean CompClause(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "CompClause")) return false;
    if (!nextTokenIs(b, "<comp clause>", FOR, IF)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, COMP_CLAUSE, "<comp clause>");
    r = CompClause_0(b, l + 1);
    if (!r) r = CompClause_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // for LoopVariables in Test
  private static boolean CompClause_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "CompClause_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, FOR);
    r = r && LoopVariables(b, l + 1);
    r = r && consumeToken(b, IN);
    r = r && Test(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // if Test
  private static boolean CompClause_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "CompClause_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, IF);
    r = r && Test(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // continue
  public static boolean ContinueStmt(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ContinueStmt")) return false;
    if (!nextTokenIs(b, CONTINUE)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, CONTINUE);
    exit_section_(b, m, CONTINUE_STMT, r);
    return r;
  }

  /* ********************************************************** */
  // def IDENTIFIER '(' (Parameters ','?)? ')' ':' Suite
  public static boolean DefStmt(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "DefStmt")) return false;
    if (!nextTokenIs(b, DEF)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, DEF, IDENTIFIER, LEFT_PAREN);
    r = r && DefStmt_3(b, l + 1);
    r = r && consumeTokens(b, 0, RIGHT_PAREN, COLON);
    r = r && Suite(b, l + 1);
    exit_section_(b, m, DEF_STMT, r);
    return r;
  }

  // (Parameters ','?)?
  private static boolean DefStmt_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "DefStmt_3")) return false;
    DefStmt_3_0(b, l + 1);
    return true;
  }

  // Parameters ','?
  private static boolean DefStmt_3_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "DefStmt_3_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = Parameters(b, l + 1);
    r = r && DefStmt_3_0_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // ','?
  private static boolean DefStmt_3_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "DefStmt_3_0_1")) return false;
    consumeToken(b, COMMA);
    return true;
  }

  /* ********************************************************** */
  // '{' Entry CompClause* '}'
  public static boolean DictComp(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "DictComp")) return false;
    if (!nextTokenIs(b, LEFT_CURLY)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LEFT_CURLY);
    r = r && Entry(b, l + 1);
    r = r && DictComp_2(b, l + 1);
    r = r && consumeToken(b, RIGHT_CURLY);
    exit_section_(b, m, DICT_COMP, r);
    return r;
  }

  // CompClause*
  private static boolean DictComp_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "DictComp_2")) return false;
    while (true) {
      int c = current_position_(b);
      if (!CompClause(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "DictComp_2", c)) break;
    }
    return true;
  }

  /* ********************************************************** */
  // '{' (Entries ','?)? '}'
  public static boolean DictExpr(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "DictExpr")) return false;
    if (!nextTokenIs(b, LEFT_CURLY)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LEFT_CURLY);
    r = r && DictExpr_1(b, l + 1);
    r = r && consumeToken(b, RIGHT_CURLY);
    exit_section_(b, m, DICT_EXPR, r);
    return r;
  }

  // (Entries ','?)?
  private static boolean DictExpr_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "DictExpr_1")) return false;
    DictExpr_1_0(b, l + 1);
    return true;
  }

  // Entries ','?
  private static boolean DictExpr_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "DictExpr_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = Entries(b, l + 1);
    r = r && DictExpr_1_0_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // ','?
  private static boolean DictExpr_1_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "DictExpr_1_0_1")) return false;
    consumeToken(b, COMMA);
    return true;
  }

  /* ********************************************************** */
  // '.' IDENTIFIER
  public static boolean DotSuffix(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "DotSuffix")) return false;
    if (!nextTokenIs(b, DOT)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, DOT, IDENTIFIER);
    exit_section_(b, m, DOT_SUFFIX, r);
    return r;
  }

  /* ********************************************************** */
  // Entry (',' Entry)*
  public static boolean Entries(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Entries")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ENTRIES, "<entries>");
    r = Entry(b, l + 1);
    r = r && Entries_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // (',' Entry)*
  private static boolean Entries_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Entries_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!Entries_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "Entries_1", c)) break;
    }
    return true;
  }

  // ',' Entry
  private static boolean Entries_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Entries_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, COMMA);
    r = r && Entry(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // Test ':' Test
  public static boolean Entry(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Entry")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ENTRY, "<entry>");
    r = Test(b, l + 1);
    r = r && consumeToken(b, COLON);
    r = r && Test(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // Expression
  public static boolean ExprStmt(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ExprStmt")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, EXPR_STMT, "<expr stmt>");
    r = Expression(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // Test (',' Test)*
  public static boolean Expression(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Expression")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, EXPRESSION, "<expression>");
    r = Test(b, l + 1);
    r = r && Expression_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // (',' Test)*
  private static boolean Expression_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Expression_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!Expression_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "Expression_1", c)) break;
    }
    return true;
  }

  // ',' Test
  private static boolean Expression_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Expression_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, COMMA);
    r = r && Test(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // Statement*
  static boolean File(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "File")) return false;
    while (true) {
      int c = current_position_(b);
      if (!Statement(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "File", c)) break;
    }
    return true;
  }

  /* ********************************************************** */
  // for LoopVariables in Expression ':' Suite
  public static boolean ForStmt(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ForStmt")) return false;
    if (!nextTokenIs(b, FOR)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, FOR);
    r = r && LoopVariables(b, l + 1);
    r = r && consumeToken(b, IN);
    r = r && Expression(b, l + 1);
    r = r && consumeToken(b, COLON);
    r = r && Suite(b, l + 1);
    exit_section_(b, m, FOR_STMT, r);
    return r;
  }

  /* ********************************************************** */
  // BinaryExpr2 if Test else Test IfExpr1?
  public static boolean IfExpr(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "IfExpr")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, IF_EXPR, "<if expr>");
    r = BinaryExpr2(b, l + 1);
    r = r && consumeToken(b, IF);
    r = r && Test(b, l + 1);
    r = r && consumeToken(b, ELSE);
    r = r && Test(b, l + 1);
    r = r && IfExpr_5(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // IfExpr1?
  private static boolean IfExpr_5(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "IfExpr_5")) return false;
    IfExpr1(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // IfExpr2 if Test else Test IfExpr1?
  public static boolean IfExpr1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "IfExpr1")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, IF_EXPR_1, "<if expr 1>");
    r = IfExpr2(b, l + 1);
    r = r && consumeToken(b, IF);
    r = r && Test(b, l + 1);
    r = r && consumeToken(b, ELSE);
    r = r && Test(b, l + 1);
    r = r && IfExpr1_5(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // IfExpr1?
  private static boolean IfExpr1_5(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "IfExpr1_5")) return false;
    IfExpr1(b, l + 1);
    return true;
  }
